# hybrid-mechlab-python

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
hybrid_mechlab/: CLT-BLT-qwen3.5-report.md  __init__.py  _version.py  api.py  profiles.py  schedules.py  unified_paper_outline.tex
hybrid_mechlab/experiments/: __init__.py  long_context.py
hybrid_mechlab/io/: __init__.py  jsonl.py  manifests.py
hybrid_mechlab/kernel/: __init__.py  array.py  backend.py  graph.py  metrics.py  persistence.py  schedule.py  sheaf.py  simplicial.py  sparse.py  topology.py  transport.py
hybrid_mechlab/topology/: __init__.py  metrics.py  offline.py  online.py  sheaf.py
tests/: test_bridge_dependence.py  test_long_context_benchmark.py  test_math_kernel.py  test_offline_persistence.py  test_packaging_contracts.py  test_partial_sheaf_contracts.py  test_readme_example.py  test_schedule_profiles.py  test_trace_roundtrip.py
