[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-mechlab-python"
version = "0.1.0a1"
description = "Standalone NumPy-first Python SDK for hybrid transport research"
authors = [{name = "hybrid-mechlab team"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["topology", "transport", "hybrid-models", "numpy", "research"]
dependencies = ["numpy>=2.0"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["build", "pytest", "ruff"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["hybrid_mechlab*"]

[tool.setuptools.package-data]
hybrid_mechlab = ["py.typed"]
